test/sema/typeck/module/inside-not-accessible.out
error: element is not accessible.
--> inside-not-accessible.dora:1:10
 | fn f(_x: foo::Foo) {}
            ~~~~~~~~
 | mod foo { class Foo }
 | 
1 error found.
