test/sema/typeck/module/inside-not-accessible.dora
fn f(_x: foo::Foo) {}
mod foo { class Foo }
